# tb

./: .gitignore  Cargo.toml  chartrie.nim  displaylist.nim  jen.nim  jsonb.nim  jsonvalue.nim  listformat.nim  listnode.nim  listvalue.nim  prompt.nim  readme.md  util.nim
doc/: demo.tape  sample.json
src/: curses.rs  disptree.rs  format.rs  fsvalue.rs  interface.rs  jsonvalue.rs  keybinder.rs  main.rs  prompt.rs
src/backends/: fs.rs  json.rs  mod.rs
src/display/: mod.rs  node.rs  tree.rs  value.rs
tb/: Cargo.toml
tb-interface/: Cargo.toml
tb-interface/src/: lib.rs
tb-sample-plugins/: Cargo.toml
tb-sample-plugins/src/: hn.rs  lib.rs  random.rs
tb/src/: curses.rs  format.rs  keybinder.rs  main.rs  prompt.rs
tb/src/backends/: fs.rs  json.rs  mod.rs  textproto.rs  txt.rs
tb/src/display/: mod.rs  node.rs  pos.rs  statmsg.rs  tree.rs  value.rs
textproto/: Cargo.toml
textproto/src/: lib.rs
