[package]
name = "tb-sample-plugins"
version = "0.1.0"
authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]

[lib]
crate_type = ["cdylib"]

[dependencies]
tb-interface = {path = "../tb-interface"}
error-chain = "0.11"
rand = "0.7"
rand_distr = "0.2"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
rayon = "1.1"
chrono = "0.4"
timeago = "0.2"
html2text = "0.1"
