[package]
name = "tb"
version = "0.4.0"
authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]

[dependencies]
error-chain = "0.11"
serde_json = "1.0"
ncurses = "5.91"
libc = "0.2"
libc-stdhandle = "0.1"
wcwidth = "1.0"
regex = "1"
libloading = "0.5"
itertools = "0.8"
tb-interface = {path = "../tb-interface"}
