[package]
name = "tb"
version = "0.6.0"
authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]

[dependencies]
error-chain = "0.11"
serde_json = "1.0"
ncurses = "5.91"
libc = "0.2"
libc-stdhandle = "0.1"
unicode-width = "0.1"
regex = "1"
libloading = "0.5"
itertools = "0.8"
clipboard = "0.5"
owning_ref = "0.4"
jq-rs = "0.4"
tb-interface = {path = "../tb-interface"}
textproto = {path = "../../textproto/textproto"}
