[package]
name = "tb"
version = "0.6.0"
authors = ["Matthew Schauer <matthew.schauer@e10x.net>"]

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
ncurses = "5.91"
libc = "0.2"
libc-stdhandle = "0.1"
unicode-width = "0.1"
regex = "1"
libloading = "0.5"
itertools = "0.8"
arboard = "2.1"
owning_ref = "0.4"
jq-rs = { git = "https://github.com/onelson/jq-rs" }
tb-interface = {path = "../tb-interface"}
textproto = {path = "../textproto"}
lazy_static = "1.4"
nom = "7.1"
